welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: Unit does not take parameters
  {
  ^