welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur())
  {
    return false
  }
  avance()
  {
    return (getCouleurSol()==Color.green)
  }
}

while (!(estSurBiscuit()))
{
  if (isFacingTrail())
  {
    avance()
  }
  else
  {
    droite()
  }
}